# PDF-to-XLSX

./: README.md  app_gui.py  pyproject.toml
.github/workflows/: ci.yml
config/: supplier_profiles.json
scripts/: build_exe_local.bat  run_gui_local.bat
src/pdf2xlsx_enterprise/: cli.py  convert.py  gui.py  pdf_reader.py  types.py  utils.py  xlsx_writer.py
src/pdf2xlsx_enterprise/parsers/: __init__.py  base.py  generic.py  omnia.py  registry.py
tests/: test_registry.py
